# maildisk

./: Cargo.toml  README.md  code.go  go.mod  go.sum
lazy/: code.go
main/: code.go
src/: lazy.rs  lib.rs  main.rs
src/types/conf/: mod.rs
type/conf/: code.go
type/exception/content_not_found/: code.go
type/exception/init_failed/: code.go
type/exception/login_failed/: code.go
type/exception/mail_box_already_exists/: code.go
type/exception/maxconn_is_zero/: code.go
